@@ -1,3 +1,9 @@
+2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* src/x_dialog.c, src/x_print.c, src/x_attribedit.c:  Applied patch
+	by Patrick Bernaud to Change button order of dialogs to be more
+	standard on *nix desktops.
+
 2006-10-20  Patrick Bernaud  <b-patrick@wanadoo.fr>
 
 	* po/fr_FR.po: Updated the French translation.
